[gd_scene load_steps=8 format=2]

[ext_resource path="res://Basquete.gd" type="Script" id=1]
[ext_resource path="res://Bola.tscn" type="PackedScene" id=2]
[ext_resource path="res://gramaTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://basqueteBackground.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 140.649, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.21533, 10.5263 )

[node name="Basquete" type="Node2D"]
script = ExtResource( 1 )

[node name="Bola" parent="." instance=ExtResource( 2 )]
position = Vector2( -102.774, 269.216 )

[node name="Cesta1" type="Area2D" parent="."]
position = Vector2( 99.978, 378.646 )
collision_layer = 65536
collision_mask = 65536
__meta__ = {
"_edit_group_": true
}

[node name="Colisao" type="CollisionShape2D" parent="Cesta1"]
shape = SubResource( 1 )

[node name="BordaCesta" type="StaticBody2D" parent="Cesta1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cesta1/BordaCesta"]
position = Vector2( 132.433, 0.16272 )
shape = SubResource( 2 )

[node name="Cesta2" type="Area2D" parent="."]
position = Vector2( 1180, 470 )

[node name="Colisao" type="CollisionShape2D" parent="Cesta2"]
position = Vector2( -3.68323, -87.1692 )
shape = SubResource( 1 )

[node name="BordaCesta2" type="StaticBody2D" parent="Cesta2"]
position = Vector2( -1080.02, -91.354 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cesta2/BordaCesta2"]
position = Vector2( 942.252, 3.48682 )
shape = SubResource( 2 )

[node name="Quadra" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -65536, 7, 0, -65535, 7, 0, -65534, 7, 0, -65533, 7, 0, -65532, 7, 0, -65531, 7, 0, -65530, 7, 0, -65529, 7, 0, -65528, 7, 0, -65527, 7, 0, -65526, 7, 0, -65525, 7, 0, -65524, 7, 0, -65523, 7, 0, -65522, 7, 0, -65521, 7, 0, -65520, 7, 0, -65519, 7, 0, -65518, 7, 0, -65517, 7, 0, -65516, 7, 0, -65515, 7, 0, -65514, 7, 0, -65513, 7, 0, -65512, 7, 0, -65511, 7, 0, -65510, 7, 0, -65509, 7, 0, -65508, 7, 0, -65507, 7, 0, -65506, 7, 0, -65505, 7, 0, -65504, 7, 0, -65503, 7, 0, -65502, 7, 0, -65501, 7, 0, -65500, 7, 0, -65499, 7, 0, -65498, 7, 0, -65497, 7, 0, 65535, 3, 0, 40, 5, 0, 131071, 3, 0, 65576, 5, 0, 196607, 3, 0, 131112, 5, 0, 262143, 3, 0, 196648, 5, 0, 327679, 3, 0, 262184, 5, 0, 393215, 3, 0, 327720, 5, 0, 458751, 3, 0, 393256, 5, 0, 524287, 3, 0, 458792, 5, 0, 589823, 3, 0, 524328, 5, 0, 655359, 3, 0, 589864, 5, 0, 720895, 3, 0, 655400, 5, 0, 786431, 3, 0, 720936, 5, 0, 851967, 3, 0, 786472, 5, 0, 917503, 3, 0, 852008, 5, 0, 983039, 3, 0, 917544, 5, 0, 1048575, 3, 0, 983080, 5, 0, 1114111, 3, 0, 1048616, 5, 0, 1179647, 3, 0, 1114152, 5, 0, 1245183, 3, 0, 1179688, 5, 0, 1310719, 3, 0, 1245224, 5, 0, 1376255, 3, 0, 1310760, 5, 0, 1441791, 3, 0, 1376296, 5, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0 )

[node name="Player 1" parent="." instance=ExtResource( 4 )]
position = Vector2( 295.549, 597.191 )
scale = Vector2( 2.5, 2.5 )

[node name="Player 2" parent="." instance=ExtResource( 4 )]
position = Vector2( 985.687, 592.262 )
scale = Vector2( 2.5, 2.5 )
player = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 6.47306e-05, -0.340968 )
scale = Vector2( 10, 10 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_group_": true
}
[connection signal="body_entered" from="Cesta1" to="." method="_on_Cesta1_body_entered"]
[connection signal="body_entered" from="Cesta2" to="." method="_on_Cesta2_body_entered"]
[connection signal="timeout" from="Timer" to="Bola" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
